css/style.css
/*font-family: 'Halant', serif;
font-family: 'Roboto Slab', serif;
font-family: 'Lato', sans-serif;*/

body {
    margin: 0;
    font-family: 'Lato', sans-serif;
    font-size: 17px;
    position: relative;

    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
}

#index:before,
#fall:before,
#spring:before,
#eggs:before,
#honey:before,
#chicken:before {
    content: ' ';
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    opacity: 0.5;
    background-repeat: no-repeat;
    background-position: 50% 0;
    -ms-background-size: cover;
    -o-background-size: cover;
    -moz-background-size: cover;
    -webkit-background-size: cover;
    background-size: cover;
}

#index:before {
    background-image: url(../images/bark.jpg);
}

#fall:before {
    background-image: url(../images/fallback.jpg);
}

#spring:before {
    background-image: url(../images/peas2.JPG);
}

#eggs:before {
    background-image: url(../images/eggsback.jpg);
}

#honey:before {
    background-image: url(../images/beeback.jpg);
}

#chicken:before {
    background-image: url(../images/straw.jpg);
}

nav {
    height: 175px;
    margin-bottom: 20px;
    background-color: #629539;
}

nav ul a {
    font-size: 1.1rem;
}

li {

    line-height: 175px;
}


#logo {
    height: 175px;
}

#farm {
    width: 100%;
}

.about {
    text-align: center;
}

.about-title {
    text-decoration: underline;
    font-size: 36px;
}

.page-footer {
    background-color: #0d1723;
    position: absolute;
    bottom: -198.8px;
    width: 100%;
}

#footer-title {
    text-align: center;
}

#facebook {
    height: 50px;
}

.contact {
    line-height: 1.2;
    margin: 0;
}

#linkposition {
    text-align: right;
}

.crops {
    line-height: 1.5;
}

.crop-title {
    font-size: 36px;
    text-align: left;
}


@media only screen and (max-width: 768px) {
    nav,
    #logo {
        height: 100px;
    }

    li {
        line-height: 100px;
    }
}

